--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -6,5 +6,58 @@
     </head>
     <body>
         <h1>Lasagna Recipe</h1>
+        <img src="../images/lasagna.jpg">
+
+        <!-- Description -->
+        <h3>Description</h3>
+        <p>Everyone loves a good lasagna, right? It's a great way to feed a crowd 
+            and a perfect dish to bring to a potluck. It freezes well. 
+            It reheats well. Leftovers will keep you happy for days.</p>
+        <p>For this recipe, we are essentially making a thick, meaty tomato sauce 
+            and layering that with noodles and cheese into a casserole. 
+            Here's the run-down:</p>
+        <ol>
+            <li>Start by making the sauce with ground beef, bell peppers, onions, 
+                and a combo of tomato sauce, tomato paste, and crushed tomatoes. 
+                The three kinds of tomatoes gives the sauce great depth of flavor.</li>
+            <li>Let this simmer while you boil the noodles and get the cheeses ready. 
+                We're using ricotta, shredded mozzarella, and parmesan -- 
+                like the mix of tomatoes, this 3-cheese blend gives the lasagna 
+                great flavor!</li>
+            <li>From there, it's just an assembly job. A cup of meat sauce, a layer 
+                of noodles, more sauce, followed by a layer of cheese. Repeat until 
+                you have three layers and have used up all the ingredients.</li>
+            <li>Bake until bubbly and you're ready to eat!</li>
+        </ol>
+
+        <!-- Ingredients -->
+        <h3>Ingredients</h3>
+        <ul>
+            <li>2 teaspoons extra virgin olive oil</li>
+            <li>1/2 medium onion, diced (about 3/4 cup)</li>
+            <li>1/2 large bell pepper (green, red, or yellow), diced</li>
+            <li>2 cloves garlic, minced</li>
+            <li>1 (28-ounce)can good-quality tomato sauce</li>
+            <li>1 (28-ounce)can good-quality tomato sauce</li>
+            <li>1 tablespoon red or white wine vinegar</li>
+            <li>1 pound ground beef chuck</li>
+            <li>1 (14 ounce) can crushed tomatoes</li>
+            <li>15 ounces ricotta cheese</li>
+            <li>1/2 pound dry lasagna noodles</li>
+        </ul>
+
+        <!-- Steps -->
+        <h3>Steps</h3>
+        <ol>
+            <li>Put pasta water on to boil.</li>
+            <li>Brown the ground beef.</li>
+            <li>Cook the bell pepper, onions, and garlic; add back the beef.</li>
+            <li>Make the sauce.</li>
+            <li>Boil and drain the lasagna noodles.</li>
+            <li>Preheat the oven to 375°F.</li>
+            <li>Assemble the lasagna.</li>
+            <li>Bakke for 45 minutes. Cool and serve.</li>
+        </ol>
+
     </body>
 </html>
