Create and populate salad.html and brownies.html. Add links to index.html

--- a/index.html
+++ b/index.html
@@ -6,6 +6,17 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="./recipes/lasagna.html">Lasagna Recipe</a>
+        <ul>
+            <li>
+                <a href="./recipes/salad.html">Salad Recipe</a>
+            </li>
+            <li>
+                <a href="./recipes/lasagna.html">Lasagna Recipe</a>
+            </li>
+            <li>
+                <a href="./recipes/brownies.html">Brownies Recipe</a>
+            </li>
+        </ul>
+        
     </body>
 </html>
