--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <h1>Lasagna Recipe</h1>
-        <img src="../images/lasagna.jpg">
+        <img src="../images/lasagna.jpg" width="600">
 
         <!-- Description -->
         <h3>Description</h3>
