Add styles.css and link it to all html files

--- a/index.html
+++ b/index.html
@@ -3,20 +3,18 @@
     <head>
         <meta charset="UTF-8">
         <title>Recipes Homepage</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <ul>
-            <li>
-                <a href="./recipes/salad.html">Salad Recipe</a>
-            </li>
-            <li>
-                <a href="./recipes/lasagna.html">Lasagna Recipe</a>
-            </li>
-            <li>
-                <a href="./recipes/brownies.html">Brownies Recipe</a>
-            </li>
-        </ul>
-        
+            <p><img src="./images/salad.jpg" width="600"></p>
+            <p><a href="./recipes/salad.html">Salad Recipe</a></p>
+
+            <p><img src="./images/lasagna.jpg" width="600"></p>
+            <p><a href="./recipes/lasagna.html">Lasagna Recipe</a></p>
+
+            <p><img src="./images/brownies.jpeg" width="600"></p>
+            <p><a href="./recipes/brownies.html">Brownies Recipe</a></p>
+
     </body>
 </html>
