--- a/recipes/brownies.html
+++ b/recipes/brownies.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Brownies Recipe</title>
+        <link rel="stylesheet" href="../styles.css">
     </head>
     <body>
         <h1>Brownies Recipe</h1>
