--- a/recipes/salad.html
+++ b/recipes/salad.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Salad Recipe</title>
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
     <h1>Salad Recipe</h1>
