--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <h1>Odin Recipes</h1>
+        <div>
+            <h1>Odin Recipes</h1>
             <p><img src="./images/salad.jpg" width="600"></p>
             <p><a href="./recipes/salad.html">Salad Recipe</a></p>
 
@@ -15,6 +16,6 @@
 
             <p><img src="./images/brownies.jpeg" width="600"></p>
             <p><a href="./recipes/brownies.html">Brownies Recipe</a></p>
-
+        </div>
     </body>
 </html>
