Add styles, Back to Home button on all recipe pages

--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <body>
         <div>
             <h1>Odin Recipes</h1>
-            <p><img src="./images/salad.jpg" width="600"></p>
+            <p><img src="./images/salad.jpg"></p>
             <p><a href="./recipes/salad.html">Salad Recipe</a></p>
 
-            <p><img src="./images/lasagna.jpg" width="600"></p>
+            <p><img src="./images/lasagna.jpg"></p>
             <p><a href="./recipes/lasagna.html">Lasagna Recipe</a></p>
 
-            <p><img src="./images/brownies.jpeg" width="600"></p>
+            <p><img src="./images/brownies.jpeg"></p>
             <p><a href="./recipes/brownies.html">Brownies Recipe</a></p>
         </div>
     </body>
