--- a/recipes/brownies.html
+++ b/recipes/brownies.html
@@ -6,54 +6,57 @@
         <link rel="stylesheet" href="../styles.css">
     </head>
     <body>
-        <h1>Brownies Recipe</h1>
-        <img src="../images/brownies.jpeg" width="600">
+        <div>
+            <a href="../index.html"><button>Back to Home</button></a> 
+            <h1>Brownies Recipe</h1>
+            <img src="../images/brownies.jpeg">
 
-        <!-- Description -->
-        <h3>Description</h3>
-        <p>Looking for the best brownie recipe on the internet? You've come to 
-            the right place! These rich, fudgy brownies are topped with a 
-            decadent homemade frosting.</p>
-        <p>Here's a very brief overview of what you can expect when you make 
-            homemade brownies:</p>
-        <ol>
-            <li>Make the brownies: Melt the butter on the stove, then remove from 
-                heat and add the remaining wet ingredients. Beat in the dry ingredients. 
-                Spread the batter in the pan and bake.</li>
-            <li>Frost the brownies: Stir the frosting ingredients together until 
-                well-combined, then frost the brownies while they are still warm. 
-                Cut into squares when cool.</li>
-        </ol>
+            <!-- Description -->
+            <h3>Description</h3>
+            <p>Looking for the best brownie recipe on the internet? You've come to 
+                the right place! These rich, fudgy brownies are topped with a 
+                decadent homemade frosting.</p>
+            <p>Here's a very brief overview of what you can expect when you make 
+                homemade brownies:</p>
+            <ol>
+                <li>Make the brownies: Melt the butter on the stove, then remove from 
+                    heat and add the remaining wet ingredients. Beat in the dry ingredients. 
+                    Spread the batter in the pan and bake.</li>
+                <li>Frost the brownies: Stir the frosting ingredients together until 
+                    well-combined, then frost the brownies while they are still warm. 
+                    Cut into squares when cool.</li>
+            </ol>
 
-        <!-- Ingredients -->
-        <h3>Ingredients</h3>
-        <ul>
-            <li>1/2 cup butter</li>
-            <li>1 cup white sugar</li>
-            <li>2 eggs</li>
-            <li>1 teaspoon vanilla extract</li>
-            <li>1/3 cup unsweetened cocoa powder</li>
-            <li>1/2 cup all-purpose flour</li>
-            <li>1/4 teaspoon salt</li>
-            <li>1/4 teaspoon baking powder</li>
-        </ul>
+            <!-- Ingredients -->
+            <h3>Ingredients</h3>
+            <ul>
+                <li>1/2 cup butter</li>
+                <li>1 cup white sugar</li>
+                <li>2 eggs</li>
+                <li>1 teaspoon vanilla extract</li>
+                <li>1/3 cup unsweetened cocoa powder</li>
+                <li>1/2 cup all-purpose flour</li>
+                <li>1/4 teaspoon salt</li>
+                <li>1/4 teaspoon baking powder</li>
+            </ul>
 
-        <!-- Steps -->
-        <h3>Steps</h3>
-        <ol>
-            <li>Preheat the oven to 350 degrees F (175 degrees C). 
-                Grease and flour an 8-inch square pan.</li>
-            <li>Melt 1/2 cup butter in a large saucepan. Remove from heat, 
-                and stir in sugar, eggs, and 1 teaspoon vanilla. 
-                Beat in 1/3 cup cocoa, flour, salt, and baking powder. 
-                Spread batter into prepared pan.</li>
-            <li>Bake in the preheated oven until top is dry and edges have 
-                started to pull away from the sides of the pan, about 25 to 30 
-                minutes. Let cool briefly before frosting.</li>
-            <li>To make the frosting: Combine softened butter, confectioners' sugar, 
-                3 tablespoons cocoa, honey, and 1 teaspoon vanilla extract in a bowl. 
-                Stir until smooth. Frost brownies while they are still warm.</li>
+            <!-- Steps -->
+            <h3>Steps</h3>
+            <ol>
+                <li>Preheat the oven to 350 degrees F (175 degrees C). 
+                    Grease and flour an 8-inch square pan.</li>
+                <li>Melt 1/2 cup butter in a large saucepan. Remove from heat, 
+                    and stir in sugar, eggs, and 1 teaspoon vanilla. 
+                    Beat in 1/3 cup cocoa, flour, salt, and baking powder. 
+                    Spread batter into prepared pan.</li>
+                <li>Bake in the preheated oven until top is dry and edges have 
+                    started to pull away from the sides of the pan, about 25 to 30 
+                    minutes. Let cool briefly before frosting.</li>
+                <li>To make the frosting: Combine softened butter, confectioners' sugar, 
+                    3 tablespoons cocoa, honey, and 1 teaspoon vanilla extract in a bowl. 
+                    Stir until smooth. Frost brownies while they are still warm.</li>
 
-        </ol>        
+            </ol>        
+        </div>
     </body>
 </html>
