Renamed headings on homepage, fixed a typo on lasagna.html

--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
     </head>
     <body>
         <div>
-            <h1>Odin Recipes</h1>
+            <h1>Recipes - 3 course meal</h1>
             <p><img src="./images/salad.jpg"></p>
-            <p><a href="./recipes/salad.html">Salad Recipe</a></p>
+            <p><a href="./recipes/salad.html">Appetizer - Salad</a></p>
 
             <p><img src="./images/lasagna.jpg"></p>
-            <p><a href="./recipes/lasagna.html">Lasagna Recipe</a></p>
+            <p><a href="./recipes/lasagna.html">Main course - Lasagna</a></p>
 
             <p><img src="./images/brownies.jpeg"></p>
-            <p><a href="./recipes/brownies.html">Brownies Recipe</a></p>
+            <p><a href="./recipes/brownies.html">Dessert - Brownies</a></p>
         </div>
     </body>
 </html>
