--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -59,7 +59,7 @@
                 <li>Boil and drain the lasagna noodles.</li>
                 <li>Preheat the oven to 375°F.</li>
                 <li>Assemble the lasagna.</li>
-                <li>Bakke for 45 minutes. Cool and serve.</li>
+                <li>Bake for 45 minutes. Cool and serve.</li>
             </ol>
         </div>
     </body>
